# openbb-agent-server

./: .gitignore  README.md  SECURITY.md  openbb.toml  pydoc-markdown.yml  pyproject.toml
.github/workflows/: deploy-docs-openbb-agent-server.yml  publish-openbb-agent-server.yml  test-unit-openbb-agent-server.yml
docs/: index.md  installation.md  quick-start.md
docs/_archive/: README.md
docs/developing/: index.md  plugin-system.md  writing-a-middleware.md  writing-a-model-provider.md  writing-a-subagent.md  writing-a-tool-source.md  writing-an-auth-backend.md
docs/explanation/: adapter.md  canvas.md  index.md  wire-contract.md
docs/guides/: architecture.md  getting-started.md  index.md  memory-and-recall.md  multimodal.md  pywry-chat.md  workspace-integration.md
docs/operating/: auth.md  configuration.md  index.md  memory.md  observability.md  persistence.md  profiles.md
openbb_agent_server/: main.py  openbb.toml.example
openbb_agent_server/_vendor/: sqlitevec.py
openbb_agent_server/acp/: __init__.py  canvas.py  canvas_app.py  provider.py
openbb_agent_server/app/: app.py  config.py  router.py  settings.py
openbb_agent_server/memory/: classifier.py  embeddings.py  factory.py  ingestion.py  reranker.py  retrievers.py  sqlite_store.py  store.py  translation.py  writer.py
openbb_agent_server/observability/: logging.py
openbb_agent_server/persistence/: models.py  prune.py  sqlite_store.py  store.py
openbb_agent_server/plugins/auth/: api_key_table.py  bearer_static.py  none.py  oidc_jwt.py  openbb_workspace.py
openbb_agent_server/plugins/checkpointers/: inmemory.py  postgres.py  sqlite.py
openbb_agent_server/plugins/middleware/: call_limit.py  loop_guard.py  tool_call_announcer.py  tool_call_ledger.py  tool_filter.py  tool_message_normaliser.py  usage_recorder.py
openbb_agent_server/plugins/models/: _validation.py  anthropic_provider.py  bedrock_provider.py  fake_provider.py  google_genai_provider.py  groq_provider.py  groq_rate_limiter.py  nvidia_provider.py  openai_compat_provider.py  openai_provider.py  snowflake_provider.py  vertex_provider.py
openbb_agent_server/plugins/subagents/: analyst.py  charter.py  model_profile.py  pdf_reader.py  researcher.py
openbb_agent_server/plugins/tools/: _media.py  artifacts.py  background_jobs.py  client_side.py  dashboard.py  fetch_url.py  gemini_embeddings.py  gemini_image.py  gemma_audio.py  groq_audio.py  inspect_widget_data.py  mcp_http.py  mcp_local.py  memory_recall.py  nemotron_ocr.py  paligemma_vision.py  pdf_extract.py  python_module.py  pywry_canvas.py  rerank.py  translate.py  vision_qa.py  web_search.py  widget_data.py  workspace_mcp.py
openbb_agent_server/plugins/tools/snowflake_tools/: client.py  cortex.py  safety.py  source.py
openbb_agent_server/prompts/: default_system_prompt.md
openbb_agent_server/protocol/: adapter.py  schemas.py  sse.py
openbb_agent_server/runtime/: builder.py  canvas.py  context.py  embedded.py  emit.py  identity.py  jobs.py  pdf_store.py  plugins.py  principal.py  registry.py  services.py  widget_store.py
openbb_agent_server/skills/multimodal-workflows/: SKILL.md
openbb_agent_server/skills/nemo-retriever/: SKILL.md
openbb_agent_server/skills/subagent-delegation/: SKILL.md
openbb_agent_server/skills/tool-use/: SKILL.md
tests/: conftest.py  test_acp_provider.py  test_app_config.py  test_auth_oidc_jwt.py  test_builder_helpers.py  test_canvas_app.py  test_canvas_documents.py  test_embedded_runtime.py  test_embeddings_live_integration.py  test_emit.py  test_jobs_e2e.py  test_memory_e2e.py  test_memory_ingestion.py  test_memory_retrievers.py  test_memory_store.py  test_middleware.py  test_middleware_tool_call_announcer.py  test_model_providers.py  test_pdf_store.py  test_persistence_sqlite.py  test_protocol_adapter.py  test_pywry_canvas.py  test_router_isolation.py  test_router_query_integration.py  test_router_traces_usage.py  test_runtime_jobs.py  test_runtime_registry.py  test_runtime_services.py  test_tool_inspect_widget_data.py  test_tool_memory_recall.py  test_tool_pdf_extract.py  test_widget_store.py  test_workspace_mcp_tools.py
website/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
website/scripts/: gen-api.mjs
website/src/css/: custom.css
